syntax = "proto3";
package tpmtools;
option go_package = "github.com/chrisfenner/tpm.tools/proto";

message ReturnCodeLookupRequest {
    string query = 1;
}

message ReturnCodeLookupResult {
    string description = 1;
}

message ReturnCodeLookupResponse {
    repeated ReturnCodeLookupResult result = 1;
}
